--- a/src/Components/Header/Header.scss
+++ b/src/Components/Header/Header.scss
@@ -3,5 +3,28 @@
   background-size:cover;
   background-repeat: no-repeat;
   height:100vh;
-
+}
+.heading-container{
+  margin-left:10%;
+  padding-top:15%;
+}
+.heading{
+  font-size:3.3rem;
+  font-weight:500;
+}
+.title{
+  display: flex;
+  flex-wrap: wrap;
+}
+@media only screen and (max-width:320px){
+  .heading{
+    font-size:2.5rem;
+  }
+  .title{
+    display: flex;
+    flex-direction:column;
+  }
+  .heading-container{
+    padding-top:5%;
+  }
 }
