--- a/src/index.css
+++ b/src/index.css
@@ -1,7 +1,10 @@
-
+@import url('https://fonts.googleapis.com/css2?family=Raleway:wght@400;500&display=swap');
 
 body {
   margin: 0;
+  font-family: -apple-system, BlinkMacSystemFont,Raleway, 'Segoe UI', 'Roboto', 'Oxygen',
+    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
+    sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
