work together done

--- a/src/Components/Blogs/Blog.scss
+++ b/src/Components/Blogs/Blog.scss
@@ -2,7 +2,7 @@
     display: flex;
     flex-wrap: wrap;
     width: 100%;
-    margin-bottom: 7%;
+    margin-bottom:4%;
     height: auto;
 }
 
@@ -27,6 +27,11 @@
     font-weight:500;
     position:relative;
 }
+.hide{
+  display: none;
+}
+
+
 
 @media only screen and  (max-width: 425px) {
     .blog-container {
