--- a/src/Components/WorkTogether/Work.scss
+++ b/src/Components/WorkTogether/Work.scss
@@ -1,16 +1,22 @@
+.work-container{
+  width:100%;
+}
 .contact-container
 {
 	width: 50vw;
 	margin: 20px;
 	padding: 20px;
 	font-family: 'Open Sans Condensed', sans-serif;
-
+}
+.handshake{
+	width:55vw;
+	height:45vh;
+}
 	.title
 	{
 		font-size: 25px;
 		font-weight: bold;
 	}
-}
 
 .form-container{
 width:65%;
@@ -20,7 +26,7 @@ width:65%;
 {
 	.contact-container
 	{
-		width: 90vw;
+		width: 100vw;
 		padding: none;
 		margin: none;
 	}
@@ -28,19 +34,25 @@ width:65%;
 	.form-container{
 	width:65%;
 	}
+	.work-container{
+	  width:100%;
+	}
 }
 @media only screen
    and (max-width :425px)
 {
 	.contact-container
 	{
-		width: 90vw;
+		width: 100vw;
 		padding: none;
 		margin: none;
 	}
 
 	.form-container{
 	width:95%;
+	}
+	.work-container{
+	  width:100%;
 	}
 }
 @media only screen
@@ -55,6 +67,9 @@ width:65%;
  //fix button
 	.form-container{
 	width:98%;
+	}
+	.work-container{
+	  width:100%;
 	}
 }
 
