--- a/src/Components/Header/Header.scss
+++ b/src/Components/Header/Header.scss
@@ -16,7 +16,10 @@
   display: flex;
   flex-wrap: wrap;
 }
-@media only screen and (max-width:320px){
+@media only screen and (max-width:425px){
+  .head {
+    height: auto;
+  }
   .heading{
     font-size:2.5rem;
   }
@@ -25,6 +28,6 @@
     flex-direction:column;
   }
   .heading-container{
-    padding-top:5%;
+    padding-bottom:5%;
   }
 }
