about us styling completed

--- a/src/Components/Aboutus/Aboutus.scss
+++ b/src/Components/Aboutus/Aboutus.scss
@@ -1,7 +1,6 @@
 .about-us{
-  background-image: url('./aboutUs.png');
-  background-size: cover;
-
+  background: linear-gradient(45deg, black 8%, rgba(0, 0, 0, 0) 8%),
+                linear-gradient(225deg, black 10%, rgba(0, 0, 0, 0) 10%);
 }
 
 .about{
@@ -12,8 +11,38 @@
   font-weight: 500;
 }
 
+@media only screen and (max-width:1024px){
+  .about-us{
+    padding: 0% 4%;
+    margin-top: 3%;
+  }
+  .about {
+    font-size: 20px;
+    margin: 2% 0% 0% 0%;
+  }
+}
+@media only screen and (max-width:768px){
+  .about-us{
+    padding: 3% 4%;
+    margin-top: 3%;
+  }
+  .about {
+    font-size: 18px;
+    margin: 0% 0% 0% 0%;
+  }
+}
+
 @media only screen and (max-width:426px){
-  .about{
-    margin:3%;
+  .about-us{
+    background: linear-gradient(45deg, black 7%, rgba(0, 0, 0, 0) 7%),
+                  linear-gradient(225deg, black 7%, rgba(0, 0, 0, 0) 7%);
+  }
+  .about-us{
+    padding:10%;
+    margin-top: 3%;
+  }
+  .about {
+    font-size: 20px;
+    margin: 2% 0% 0% 0%;
   }
 }
