changes in work with us

--- a/src/Components/WorkTogether/Work.scss
+++ b/src/Components/WorkTogether/Work.scss
@@ -27,7 +27,7 @@
   margin: 2px;
   display: flex;
   justify-content: center;
-  margin: 5%;
+  margin:5% 5% 5% 30%;
 }
 .inputval{
   background:#202020;
@@ -45,6 +45,7 @@
 .handshake{
 	width:45vw;
 	height:75vh;
+  margin-top:8%;
 }
 
 .work-title
