--- a/src/Components/Blogs/Blog.scss
+++ b/src/Components/Blogs/Blog.scss
@@ -1,49 +1,32 @@
-.blog-container {
-    display: flex;
-    flex-wrap: wrap;
-    width: 100%;
-    margin-bottom:4%;
-    height: auto;
+.blog-item-container{
+    display: grid;
+    grid-template-columns: 50% 50%;
 }
 
-.blog-content {
-    margin-left: 20%;
-    margin-top: 5%;
-    margin-bottom: 5%;
-    padding: 2% 5% 2%;
-    width:55vw;
-    height:auto;
+.blog-item{
+    display: grid;
+    grid-template-rows: auto auto auto;
+    margin: 5%;
+    background-color: #191b1a;
+    color: white;
+    border-radius: 3%;
+    padding: 3%;
+    overflow: hidden;
 }
 
-.blog-heading {
-    text-decoration: underline;
-    text-decoration-color: green;
+.blog-item-desc{
+    text-align: left;
+    padding: 0% 3% 0% 3%;
 }
 
-.blog-id {
-    font-size:10rem;
-    bottom:10%;
-    left:10%;
-    font-weight:500;
-    position:relative;
-}
-.hide{
-  display: none;
+.blog-item-header{
+    text-align: left;
+    padding: 0% 3% 0% 3%;
+
 }
 
-
-
-@media only screen and  (max-width: 428px) {
-    .blog-container {
-        height: auto;
-    }
-    .blog-content {
-        width: 100%;
-        height: 100%;
-        margin: 0%;
-    }
-    .blog-id {
-        font-size: 3rem;
-        left: 2%;
+@media only screen and (max-width: 769px) {
+    .blog-item-container{
+        grid-template-columns: 100%;
     }
 }
