--- a/src/Components/Testimonial/style.scss
+++ b/src/Components/Testimonial/style.scss
@@ -29,6 +29,9 @@
     .client-card {
         height: 65vh;
     }
+    .testimonial-quote {
+        font-size: 20px;
+    }
 }
 
 @media only screen and (max-width: 426px) {
