--- a/src/Components/Aboutus/Aboutus.scss
+++ b/src/Components/Aboutus/Aboutus.scss
@@ -3,23 +3,45 @@
 //                 linear-gradient(225deg, black 10%, rgba(0, 0, 0, 0) 10%);
 // }
 .about-grid{
-  display:flex;
-  flex-wrap: wrap;
-  margin-left:8%;
+  display: grid;
+  grid-template-columns: 33% 34% 33%;
+  margin: 2%;
 }
+
+.parallax{
+  width:'100%';
+  height:'400px';
+  padding:50px 0px ;
+  background: url("aboutimage.jpg");
+  background-attachment: fixed;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: 100vw;
+  background-color: rgba(0,0,0,0.6);
+  background-blend-mode: darken;
+}
+
 .about-with-image
 {
-  display:grid;
-  grid-template-columns:45% 55%;
 }
 .circle-div{
-  margin: 3% 6% 3% 6%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
 }
 .about{
   margin: 5% 10% 0% 10%;
   font-size: 20px;
   text-align: left;
   font-weight: 500;
+}
+
+.about-header{
+  margin: 5% 10% 0% 10%;
+  font-size: 20px;
+  text-align: left;
+  font-weight: 500; 
 }
 
 
@@ -34,19 +56,24 @@
     margin: 0% 0% 0% 0%;
     padding:0% 6% 6% 6%;
   }
-  .circle-div{
-    margin: 0;
+  .about-header{
+    text-align: center;
+    margin: 2%;
+  }
+  .parallax{
+    height: auto;
+    background-size: cover;
   }
 }
 
 @media only screen and (max-width:426px){
  .about-grid{
-  margin-left:26%;
- }
+  grid-template-columns: 100%;
+ }  
 }
 
 @media only screen and (max-width:321px){
  .about-grid{
-  margin-left:18%;
+  grid-template-columns: 100%;
  }
 }
