--- a/src/Components/ReachUsAt/ReachUsAt.scss
+++ b/src/Components/ReachUsAt/ReachUsAt.scss
@@ -25,6 +25,16 @@ a{
   padding-right: 5%;
 }
 
+.icon
+{
+  transition: all 0.3s ease-out;
+}
+
+.icon:hover{
+  transform: scale(1.3);
+  color: green;
+}
+
 @media only screen and(max-width: 1024px) {
   .reach-img{
     height:70vh;
