--- a/src/Components/Testimonial/Testimonial.scss
+++ b/src/Components/Testimonial/Testimonial.scss
@@ -1,5 +1,6 @@
 .testimonials{
-    background-image: url('./b&w.png');
+  background: linear-gradient(to bottom,
+     white 65%, black 35%);
     overflow: hidden;
 }
 
