--- a/src/Components/Aboutus/Aboutus.scss
+++ b/src/Components/Aboutus/Aboutus.scss
@@ -2,6 +2,18 @@
 //   background: linear-gradient(45deg, black 8%, rgba(0, 0, 0, 0) 8%),
 //                 linear-gradient(225deg, black 10%, rgba(0, 0, 0, 0) 10%);
 // }
+.particle
+{
+  position:absolute;
+  top:0;
+  left:0;
+  width:100%;
+  height:100%;
+}
+.about-div{
+    position: relative;
+}
+
 .about-grid{
   display: grid;
   grid-template-columns: 33% 34% 33%;
@@ -41,7 +53,7 @@
   margin: 5% 10% 0% 10%;
   font-size: 20px;
   text-align: left;
-  font-weight: 500; 
+  font-weight: 500;
 }
 
 
@@ -69,7 +81,7 @@
 @media only screen and (max-width:426px){
  .about-grid{
   grid-template-columns: 100%;
- }  
+ }
 }
 
 @media only screen and (max-width:321px){
