--- a/src/Components/SurveyForm/SurveyForm.scss
+++ b/src/Components/SurveyForm/SurveyForm.scss
@@ -1,6 +1,8 @@
 $sub-color: white;
 $main-color:gray;
-
+.survey-div{
+	background: linear-gradient(to bottom ,white 50%, green 50%);
+}
 .contact-container2
 {
 	width: 80vw;
