--- a/src/Components/Testimonial/Testimonial.scss
+++ b/src/Components/Testimonial/Testimonial.scss
@@ -9,11 +9,12 @@
     flex-direction: column;
     justify-content: center;
     align-items: flex-start;
-    box-shadow: 100px black;
     padding: 0% 10%;
     margin: 10% 5%;
     height: 50vh;
-    border: 1px solid black;
+    box-shadow: 0px 0px 8px 1px black;
+    border-bottom:3px solid green;
+    border-radius: 3%;
 }
 
 
