--- a/src/Components/SurveyForm/SurveyForm.scss
+++ b/src/Components/SurveyForm/SurveyForm.scss
@@ -17,7 +17,7 @@ $main-color:gray;
 	border: 1px solid green;
 }
 
-.para
+.para1
 {
 	font-size: 2rem;
 	font-weight: 500;
@@ -54,7 +54,7 @@ $main-color:gray;
 		transform: scale(1.1);
 	}
 }
-select, .shortterm {
+.select-boom, .shortterm {
 		font-size: 18px;
 		padding: 10px 10px 10px 5px;
 		display: block;
