--- a/src/index.css
+++ b/src/index.css
@@ -16,7 +16,7 @@ body {
 
 ::-webkit-scrollbar-thumb{
 	border-radius: 30px;
-	background: green;
+	background:gray;
 	box-shadow: 2px 2px 2px rgba(255, 255, 255, 0.25), inset -2px -2px -2px rgba(0, 0, 0, 0.25);
 }
 
