--- a/src/Components/Pricing/Pricing.scss
+++ b/src/Components/Pricing/Pricing.scss
@@ -1,12 +1,30 @@
 .grid{
   display: grid;
   grid-template-columns:1fr 1fr 1fr;
-  grid-template-rows: 33% 33% 34%;
+  margin:5% 0% 5% 0%;
 }
+.main-container{
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
 
+}
+.price{
+  width:30vw;
+  height:auto;
+  background-color:white;
+  margin:5%;
+}
+.features-div{
+  display:grid;
+  grid-template-columns:40% auto auto;
+}
+.sub-div{
+  padding:0% 8% 0% 8%;
+}
 .button {
   border-radius: 4px;
-  background-color:green;
+  background-color:black;
   border: none;
   color: #FFFFFF;
   text-align: center;
@@ -33,7 +51,10 @@
   right: -20px;
   transition: 0.5s;
 }
+.button:hover{
+  background-color:blue;
 
+}
 .button:hover span {
   padding-right: 25px;
 }
@@ -43,67 +64,21 @@
   right: 0;
 }
 
-ul {
-  margin-left: 20%;
-}
-
-li {
-  font-size: 25px;
-  margin-bottom: 8%;
-}
-
-@media only screen and (max-width: 1024px) {
-  li{
-    font-size: 20px;
-  }
-  ul {
-    margin-left: 15%;
-  }
-}
-
-@media only screen and (max-width: 768px) {
-  li{
-    font-size: 20px;
-  }
-  ul {
-    margin-left: 0%;
-  }
-}
-
 @media only screen and (max-width:426px){
   .grid{
     grid-template-columns:100%;
-    padding-bottom: 0%;
-    margin-bottom: 0%;
   }
-  li{
-    font-size: 25px;
+ .price{
+   width:90vw;
+   margin:5%;
+ }
+  .features-div{
+      grid-template-columns:100%;
   }
-  ul {
-    margin-left: 20%;
+  .sub-div{
+    padding:5%;
   }
-}
-
-@media only screen and (max-width:375px){
-
-  li{
-    font-size: 25px;
-  }
-  ul {
-    margin-left: 15%;
+  .main-container{
+      align-items:center;
   }
 }
-
-@media only screen and (max-width:320px){
-
-  li{
-    font-size: 25px;
-  }
-  ul {
-    margin-left: 10%;
-  }
-}
-
-
-
-//styling and a bit of responsive-remaining
