--- a/src/Components/Pricing/Pricing.scss
+++ b/src/Components/Pricing/Pricing.scss
@@ -3,6 +3,10 @@
   grid-template-columns:1fr 1fr 1fr;
   margin:5% 0% 5% 0%;
 }
+.background-div{
+  background:url('back.jpg') no-repeat center center/cover;
+  height:50vh;
+}
 .main-container{
   display: flex;
   flex-direction: column;
