--- a/src/Components/CallBack/FormInput/FormInput.scss
+++ b/src/Components/CallBack/FormInput/FormInput.scss
@@ -1,9 +1,9 @@
-$sub-color: white;
-$main-color:gray;
+$sub-color: rgb(0, 0, 0);
+$main-color:rgb(0, 0, 0);
 
 @mixin shrinkLabel {
 	top: -14px;
-	font-size: 12px;
+	font-size: 16px;
 	color: $main-color;
 }
 
@@ -12,15 +12,16 @@ $main-color:gray;
 	margin: 45px 0;
 
 	.form-input {
-		background:gray;
 		color: $sub-color;
+		outline: none;
 		font-size: 18px;
 		padding: 10px 10px 10px 5px;
 		display: block;
 		cursor: pointer;
 		width: 100%;
 		height:7.5vh;
-		border: 1px solid gray;
+		border: none;
+		border-bottom: 1px solid black;
 		border-radius:6px;
 		margin: 25px 0;
 
