--- a/src/Components/Header/Header.scss
+++ b/src/Components/Header/Header.scss
@@ -1,33 +1,5 @@
-.head{
-  background-image: url("./headerbackground.png");
-  background-size:cover;
-  background-repeat: no-repeat;
+.head-bg{
+  // background-image: linear-gradient(to right top, #f96510, #f77910, #f58b17, #f29c23, #efab31);
+  background: url('headerbackground.jpeg') no-repeat center center/cover;
   height:100vh;
-}
-.heading-container{
-  margin-left:10%;
-  padding-top:15%;
-}
-.heading{
-  font-size:3.3rem;
-  font-weight:500;
-}
-.title{
-  display: flex;
-  flex-wrap: wrap;
-}
-@media only screen and (max-width:425px){
-  .head {
-    height: auto;
-  }
-  .heading{
-    font-size:2.5rem;
-  }
-  .title{
-    display: flex;
-    flex-direction:column;
-  }
-  .heading-container{
-    padding-bottom:5%;
-  }
 }
