--- a/src/Components/Pricing/Pricing.scss
+++ b/src/Components/Pricing/Pricing.scss
@@ -2,10 +2,15 @@
   display: grid;
   grid-template-columns:1fr 1fr 1fr;
   margin:5% 0% 5% 0%;
+  align-items:center;
 }
 .background-div{
   background:url('back.jpg') no-repeat center center/cover;
-  height:50vh;
+  height:90vh;
+  display:flex;
+  flex-direction:column;
+  justify-content:center;
+  align-items:center;
 }
 .main-container{
   display: flex;
@@ -18,6 +23,9 @@
   height:auto;
   background-color:white;
   margin:5%;
+  display:flex;
+  flex-direction: column;
+  justify-content:center;
 }
 .features-div{
   display:grid;
