--- a/src/Components/Aboutus/Aboutus.scss
+++ b/src/Components/Aboutus/Aboutus.scss
@@ -12,6 +12,8 @@
 }
 .about-div{
     position: relative;
+    background:url('about-background.jpg') no-repeat center center/cover;
+    height:90vh;
 }
 
 .about-grid{
@@ -81,6 +83,9 @@
 @media only screen and (max-width:426px){
  .about-grid{
   grid-template-columns: 100%;
+ }
+ .about-div{
+   height:auto;
  }
 }
 
