--- a/src/Components/Aboutus/CustomButton/CustomButton.scss
+++ b/src/Components/Aboutus/CustomButton/CustomButton.scss
@@ -6,7 +6,7 @@
   line-height: 50px;
   padding: 0px 35px;
   font-size: 15px;
-  background-color:green;
+  background-color:blue;
   color: white;
   text-transform: uppercase;
   font-family: 'Open Sans Condensed';
@@ -21,8 +21,8 @@
   &:hover
   {
     background-color: white;
-    color: black;
-    border: solid 1.5px black;
+    color: blue;
+    border: solid 1.5px blue;
   }
 
   &.google-sign-in {
