--- a/src/Components/Calculator/Calculator.scss
+++ b/src/Components/Calculator/Calculator.scss
@@ -1,3 +1,25 @@
+.claculator-box{
+  width:100vw;
+  height:25vh;
+  background:url('CALCULATOR.svg') no-repeat center center/cover;
+  color:white;
+  display: grid;
+  grid-template-columns:70% 30%;
+  justify-content:center;
+  align-items:center;
+}
+.calc-head{
+  padding:0% 8% 0% 8%;
+}
+.show{
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+.hide{
+  display:none;
+}
 .calc-1{
   display: grid;
   grid-template-columns: 50% 50%;
@@ -8,7 +30,7 @@
   display: block;
   cursor: pointer;
   border: none;
-  border-bottom: 2px solid #b3e5b4;
+  border-bottom: 1.5px solid #0075ff;
   margin:3%;
 
   &:focus {
@@ -21,7 +43,7 @@
   display: block;
   cursor: pointer;
   border: none;
-  border-bottom: 2px solid #b3e5b4;
+  border-bottom:1.5px solid #0075ff;
   margin: 2%;
 
   &:focus {
@@ -35,7 +57,7 @@
   display: block;
   cursor: pointer;
   border: none;
-  border-bottom: 2px solid #b3e5b4;
+  border-bottom: 1.5px solid #0075ff;
   margin:3%;
 
   &:focus {
@@ -70,7 +92,8 @@
   line-height: 50px;
   padding: 0px 35px;
   font-size: 15px;
-  background-color:green;
+  background-color:#0075ff;
+  border-radius:8px;
   color: white;
   text-transform: uppercase;
   font-family: 'Open Sans Condensed';
@@ -89,6 +112,9 @@
   #select-plan
   {
     width: 37vw;
+  }
+  .claculator-box{
+    height:auto;
   }
 
 }
@@ -114,6 +140,17 @@
     width:100%;
   }
   .calc-def{
+    padding:2%;
+  }
+  .claculator-box{
+    grid-template-columns:100%;
+    height:auto;
+  }
+  .button-div{
+    padding-left:26%;
+    padding-bottom:4%;
+  }
+  .calc-head{
     padding:2%;
   }
 }
