--- a/src/Components/Faqs/FAQ.css
+++ b/src/Components/Faqs/FAQ.css
@@ -3,7 +3,7 @@
 	max-height: 0;
 	overflow-y: hidden;
 	transition: all 0.4s ease-out;
-	color: #adb5bd;
+	color:black;
 	text-align: left;
 }
 .faqs .faq.open .faq-question {
