--- a/src/Components/Faqs/faqfun.css
+++ b/src/Components/Faqs/faqfun.css
@@ -1,6 +1,6 @@
 
 .faqs {
-	width: 65%;
+	width:50%;
 	margin: 0 auto;
 	padding: 15px;
 }
@@ -8,7 +8,7 @@
 .faqs .faq {
 	margin: 15px;
 	padding: 15px;
-	background-color:black;
+	background-color:white;
 	border-radius: 8px;
 }
 
