--- a/src/Components/SurveyForm/SurveyForm.scss
+++ b/src/Components/SurveyForm/SurveyForm.scss
@@ -1,8 +1,30 @@
 $sub-color: white;
 $main-color:gray;
 .survey-div{
-	background: linear-gradient(to bottom ,white 50%, green 50%);
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	align-items: center;
+	background-color: rgba(236, 243, 255);
 }
+
+.survey-form-container{
+	width: 60vw;
+	margin: 3%;
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	align-items: center;
+}
+
+.input-div{
+	width: 70%;
+	padding: 2%;
+	margin: 1% 0% 1% 0%;
+	background-color: white;
+	box-shadow: 2px 2px 8px 0px rgba( 0, 0, 0, 0.2 ); 
+}
+
 .contact-container2
 {
 	width: 80vw;
@@ -42,7 +64,6 @@ $main-color:gray;
 	padding: 10px 10px 10px 5px;
 	display: block;
 	cursor: pointer;
-	width: 50%;
 	height:7.5vh;
 	border: none;
 	border-bottom: 2px solid #b3e5b4;
