Added survey form

--- a/src/Components/SurveyForm/SurveyForm.scss
+++ b/src/Components/SurveyForm/SurveyForm.scss
@@ -93,7 +93,7 @@ $main-color:gray;
 		}
 
 	}
-input[type="radio"]
+input[type="radio"], input[type="checkbox"]
 {
 	margin:2%;
 	transform: scale(1.5);
