--- a/src/Components/Aboutus/Aboutus.scss
+++ b/src/Components/Aboutus/Aboutus.scss
@@ -12,7 +12,7 @@
 }
 .about-div{
     position: relative;
-    background:url('about-background.jpg') no-repeat center center/cover;
+    background:url('./about-us-bg.png') no-repeat center center/cover;
     height:90vh;
 }
 
@@ -26,7 +26,7 @@
   width:'100%';
   height:'400px';
   padding:50px 0px ;
-  background: url("aboutimage.jpg");
+  background: url("./about-us-bg.png");
   background-attachment: fixed;
   background-position: center;
   background-repeat: no-repeat;
@@ -35,9 +35,6 @@
   background-blend-mode: darken;
 }
 
-.about-with-image
-{
-}
 .circle-div{
   display: flex;
   flex-direction: column;
