--- a/src/Components/Pricing/Pricing.scss
+++ b/src/Components/Pricing/Pricing.scss
@@ -5,7 +5,7 @@
   align-items:center;
 }
 .background-div{
-  background:url('back.jpg') no-repeat center center/cover;
+  background:url('./services-bg.png') no-repeat center center/cover;
   height:90vh;
   display:flex;
   flex-direction:column;
