--- a/src/Components/Pricing/Pricing.scss
+++ b/src/Components/Pricing/Pricing.scss
@@ -4,9 +4,9 @@
   margin:5% 0% 5% 0%;
   align-items:center;
 }
-.background-div{
+.head-bg1{
   background:url('back.jpg') no-repeat center center/cover;
-  height:90vh;
+  height:100vh;
   display:flex;
   flex-direction:column;
   justify-content:center;
