--- a/src/Components/Pricing/Pricing.scss
+++ b/src/Components/Pricing/Pricing.scss
@@ -20,6 +20,16 @@
   width: 100%;
 
 }
+
+
+.bg-payment-div{
+position: fixed;
+top: 10%;
+left:37%;
+z-index: 10;
+}
+
+
 .price{
   width:30vw;
   height:auto;
@@ -75,6 +85,14 @@
 .button:hover span:after {
   opacity: 1;
   right: 0;
+}
+
+.showPayment{
+  display: block;
+}
+
+.hidePayment{
+  display: none;
 }
 
 @media only screen and (max-width:426px){
