--- a/src/Components/Pricing/Pricing.scss
+++ b/src/Components/Pricing/Pricing.scss
@@ -95,6 +95,12 @@ z-index: 10;
   display: none;
 }
 
+@media only screen and (max-width:768px){
+  .bg-payment-div{
+    left:27%;
+  }
+}
+
 @media only screen and (max-width:426px){
   .price-grid{
     grid-template-columns:100%;
@@ -111,5 +117,11 @@ z-index: 10;
   }
   .main-container{
       align-items:center;
+  }
+}
+
+@media only screen and (max-width:768px){
+  .bg-payment-div{
+    left:27%;
   }
 }
