--- a/src/Components/PaymentForm/PaymentForm.scss
+++ b/src/Components/PaymentForm/PaymentForm.scss
@@ -1,19 +1,24 @@
 .payment-form-bg{
-    background-color: rgb(181, 246, 255);
-
+    
 .payment-form{
-    input, select{
+    .width-input{
         outline: none;
         margin: 20px 0;
         border: none;
         border-bottom: 1px solid black ;
         border-radius: 6px;
         background: none;
+        width: 300px;
     }
     button{
         border: none;
         outline: none;
     }
 }
-
+@media only screen and (max-width:425px) {
+    .width-input{
+        width: 200px;
+    }
 }
+}
+
