--- a/src/Components/Pricing/Pricing.scss
+++ b/src/Components/Pricing/Pricing.scss
@@ -75,7 +75,7 @@ z-index: 10;
   transition: 0.5s;
 }
 .button:hover{
-  background-color:blue;
+  background-color:#0069FF;
 
 }
 .button:hover span {
