--- a/src/Components/SurveyForm/CustomButton/CustomButton.scss
+++ b/src/Components/SurveyForm/CustomButton/CustomButton.scss
@@ -6,7 +6,7 @@
   line-height: 50px;
   padding: 0px 35px;
   font-size: 15px;
-  background-color:blue;
+  background-color:#0069FF;
   color: white;
   text-transform: uppercase;
   font-family: 'Open Sans Condensed';
