--- a/src/Components/Header/Header.scss
+++ b/src/Components/Header/Header.scss
@@ -1,5 +1,5 @@
 .head-bg{
   // background-image: linear-gradient(to right top, #f96510, #f77910, #f58b17, #f29c23, #efab31);
-  background: url('headerbackground.jpeg') no-repeat center center/cover;
+  background: url('headerbackground.png') no-repeat center center/cover;
   height:100vh;
 }
